# Term-Project

detector/: .gitignore  CMakeLists.txt  CMakePresets.json  NOTE.md  diagnostics.c  graph.py
detector/include/detector/: config.h  datagram.h  thread.h  time.h
detector/lib/: CMakeLists.txt
detector/lib/buffer/: CMakeLists.txt
detector/lib/client/: CMakeLists.txt  client.c
detector/lib/server/: CMakeLists.txt  server.c
detector/src/: CMakeLists.txt  main.c
detector/src/client/: CMakeLists.txt  client.c
detector/src/server/: CMakeLists.txt  server.c
